test/must_fail/file_write_bad_dir.ngjs
#!/usr/bin/env ngspicejs
// This file shows that throwing exceptions from different files works and it displays correct line and filename
// linter: ngspicejs-lint
"use strict";

file_write('bad-dir/foo', 'asdf');
